# diplomova_prace

./: .gitignore  CMakeLists.txt  NOTES.md  README.md
notes/: NOTES.md
src/: .gitignore  CMakeLists.txt  main.cpp  main.py  test.ipynb  train.py  trainer.py  utils.py
src/datasets/: PETS_2009.py  VisDrone2020.py  __init__.py  fdst.py  sequentialDataset.py
src/losses/: bregman_pytorch.py  ot_loss.py
src/models/: ConvRNN.py  encoder.py  model.py
src/statistics/: analyze.R
src/testing/: utils.py
text/: .gitignore  Master.tex  NOTES.md  sources.bib
text/Chapters/: History.tex  Introduction.tex  datasets.tex  history.tex  implementation.tex  introduction.tex  solution.tex  testing.tex
text/Chapters/solution/: convlstm.tex  dm_count.tex  resnet.tex  solution.tex  training_loss.tex
text/Figures/implementation/: overfitting.pdf_tex  python_logo.pdf_tex  pytorch_logo.pdf_tex
text/Figures/solution/: ConvLSTM_schema.drawio  LSTM_diagram.drawio  Optimal_transport.drawio  RNN.drawio  net_structure.drawio  residual_block.drawio
text/plots/errs/: heat_map.py  matrix.R  plot_new.plt  plot_old.plt  results_new.csv  results_old.csv  results_old_pets.csv  results_old_pets_txt.csv  results_old_txt.csv
